--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-datepicker": "^4.1.1",
     "react-dom": "17.0.2",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "swiper": "^6.7.5"
   },
   "devDependencies": {
     "eslint": "7.30.0",
