--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "antd": "^4.16.6",
     "classnames": "^2.3.1",
-    "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-datepicker": "^4.1.1",
