--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "prod": "next build && next start"
   },
   "dependencies": {
     "antd": "^4.16.6",
